SK_Agentry_FE/k8s/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: SK_Agentry_FE
  namespace: skala-edu
spec:
  replicas: 1
  selector:
    matchLabels:
      app: SK_Agentry_FE
  template:
    metadata:
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/port: '8081'
        prometheus.io/path: '/actuator/prometheus'
        update: 09bb72ef7dcb3ee947516afa1d43e3c2
      labels:
        app: SK_Agentry_FE
    spec:
      serviceAccountName: default
      containers:
      - name: SK_Agentry_FE
        image: amdp-registry.skala-ai.com/skala25a/SK_Agentry_FE:1.0.0
        imagePullPolicy: Always
