SK_Agentry_FE/k8s/ingress-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: SK_Agentry_FE-ingress
  namespace: skala-practice
spec:
  ingressClassName: public-nginx
  rules:
  - host: SK_Agentry_FE.skala25a.project.skala-ai.com
    http:
      paths:
      - backend:
          service:
            name: SK_Agentry_FE
            port:
              number: 8080
        path: /api
        pathType: Prefix
      - backend:
          service:
            name: SK_Agentry_FE
            port:
              number: 8081
        path: /actuator
        pathType: Prefix
      - backend:
          service:
            name: SK_Agentry_FE
            port:
              number: 8080
        path: /swagger
        pathType: Prefix
      - backend:
          service:
            name: SK_Agentry_FE
            port:
              number: 8080
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - SK_Agentry_FE.skala25a.project.skala-ai.com
    secretName: sk059-manual-tls-secret
